# introduzione_ros

./: .gitignore  LICENSE  README.md
newbie/: CMakeLists.txt  package.xml
newbie/include/newbie/: newbie.h
newbie/src/: prova.cpp
newbie/src/newbie/: newbie.cpp
